--- a/plugins/woocommerce-admin/client/analytics/report/style.scss
+++ b/plugins/woocommerce-admin/client/analytics/report/style.scss
@@ -20,6 +20,7 @@
 	border-radius: 0;
 	border: 1px solid $core-grey-light-700;
 	box-shadow: none;
+	margin-bottom: $gap-large;
 
 	&:hover {
 		box-shadow: none;
