--- a/plugins/woocommerce-admin/client/header/activity-panel/panels/inbox/style.scss
+++ b/plugins/woocommerce-admin/client/header/activity-panel/panels/inbox/style.scss
@@ -6,7 +6,7 @@
 	background: $core-grey-light-200;
 	border-radius: 2px;
 	@include font-size( 13 );
-	margin: 20px;
+	margin: 0 0 $gap-large;
 	-ms-box-orient: horizontal;
 	&.banner {
 		-webkit-flex-direction: column;
@@ -186,7 +186,13 @@
 	}
 }
 
+#activity-panel-inbox {
+	margin: 0 $gap-large;
+}
+
 .woocommerce-layout__inbox-panel-header {
+	padding: $gap-large;
+
 	.woocommerce-homepage-column & {
 		padding: 0 24px;
 	}
